@@ -1,5 +1,8 @@
 Revision history for Perl module Mojo::JWT
 
+NEXT
+  - Allow passing in a JWKSet which can be used for decoding/verifying tokens
+
 0.08 2018-12-03
   - Specify minimum perl version (openstrike, PRC)
 
